--- a/s/style.css
+++ b/s/style.css
@@ -39,6 +39,7 @@ body {
   -ms-text-size-adjust: 100%;
   text-rendering: optimizelegibility;
   -webkit-font-smoothing: subpixel-antialiased;
+  visibility: hidden;
 }
 body:before,
 body:after {
